добавит зависимости для тестов; добавит интеграционные тесты для контроллера и репозиториев;